медиа запросы для элементов шапки

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Подключи шрифт тут */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -19,8 +19,8 @@ body {
 
     padding-bottom: 120px;
     margin: 0 auto;
-
-    /* Напиши ограничения тут */
+    max-width: 1920px;
+    min-width: 360px;
 }
 
 .header {
@@ -133,4 +133,30 @@ body {
     gap: 50px;
 }
 
-/* Напиши код ниже */
+@media screen and (max-width:1240px) {
+    .header__title {
+        font-size: 100px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .header__nav {
+        display: none;
+    }
+
+    .header__menu {
+        display: block;
+    }
+
+    .header {
+        padding: 40px;
+    }
+
+    .header__title {
+        font-size: 60px;
+    }
+
+    .header__subtitle {
+        font-size: 18px;
+    }
+}
